--- a/iphone/UserLoginAndRegistration/UserLoginAndRegistration/Base.lproj/Main.storyboard
+++ b/iphone/UserLoginAndRegistration/UserLoginAndRegistration/Base.lproj/Main.storyboard
@@ -16,7 +16,7 @@
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                     </tabBar>
                     <connections>
-                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="viewControllers" id="jjm-oW-MfG"/>
+                        <segue destination="GwN-pN-eLh" kind="relationship" relationship="viewControllers" id="jjm-oW-MfG"/>
                         <segue destination="RKz-Mt-eJM" kind="relationship" relationship="viewControllers" id="gkK-MF-0k8"/>
                         <segue destination="xgt-Ut-KOU" kind="relationship" relationship="viewControllers" id="Zhc-OM-f5G"/>
                     </connections>
@@ -93,7 +93,7 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <prototypes>
                             <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="MealTableViewCell" id="Bo8-r5-61M" customClass="MealTableViewCell" customModule="UserLoginAndRegistration" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="22" width="320" height="66"/>
+                                <rect key="frame" x="0.0" y="86" width="320" height="66"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="Bo8-r5-61M" id="Lad-gx-t5K">
                                     <rect key="frame" x="0.0" y="0.0" width="320" height="65.5"/>
@@ -128,7 +128,6 @@
                             <outlet property="delegate" destination="BYZ-38-t0r" id="HO8-Yg-aPi"/>
                         </connections>
                     </tableView>
-                    <tabBarItem key="tabBarItem" title="Item" id="IgJ-xb-1wR"/>
                     <navigationItem key="navigationItem" title="Menu " id="pCD-zm-JlU" userLabel="Menu">
                         <barButtonItem key="rightBarButtonItem" style="plain" id="92W-Fh-sjs">
                             <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="O4F-rE-cH5">
@@ -142,7 +141,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="983" y="223"/>
+            <point key="canvasLocation" x="1515" y="223"/>
         </scene>
         <!--Login View Controller-->
         <scene sceneID="6O8-Pn-vsv">
@@ -227,7 +226,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Dtz-TX-X3u" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1488" y="223"/>
+            <point key="canvasLocation" x="2020" y="223"/>
         </scene>
         <!--Reset Password View Controller-->
         <scene sceneID="MnZ-RS-5U0">
@@ -285,7 +284,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="GIl-6z-PqT" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1922" y="224"/>
+            <point key="canvasLocation" x="2454" y="224"/>
         </scene>
         <!--Register Page View Controller-->
         <scene sceneID="MoW-KZ-LHS">
@@ -367,6 +366,25 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="5jE-bK-iwm" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1488" y="969"/>
+        </scene>
+        <!--Item-->
+        <scene sceneID="51D-S3-cPc">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="GwN-pN-eLh" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Item" id="IgJ-xb-1wR"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="fxl-Dw-xr9">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="zrn-5C-mbi"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="okl-Bc-nRp" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="983" y="223"/>
         </scene>
     </scenes>
     <resources>
