--- a/iphone/UserLoginAndRegistration/UserLoginAndRegistration/Base.lproj/Main.storyboard
+++ b/iphone/UserLoginAndRegistration/UserLoginAndRegistration/Base.lproj/Main.storyboard
@@ -114,10 +114,33 @@
                                             <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                             <nil key="highlightedColor"/>
                                         </label>
+                                        <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2yK-6c-eQ8">
+                                            <rect key="frame" x="218" y="20" width="25" height="25"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="39"/>
+                                            <state key="normal" title="-"/>
+                                            <connections>
+                                                <action selector="minusButtonTapped:" destination="Bo8-r5-61M" eventType="touchUpInside" id="bAc-rJ-6sr"/>
+                                            </connections>
+                                        </button>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="0" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mqo-A2-wZ9">
+                                            <rect key="frame" x="243" y="24" width="42" height="21"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8Tj-UN-IN4">
+                                            <rect key="frame" x="287" y="20" width="25" height="25"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="39"/>
+                                            <state key="normal" title="+"/>
+                                            <connections>
+                                                <action selector="plusButtonTapped:" destination="Bo8-r5-61M" eventType="touchUpInside" id="gCW-Uz-pIa"/>
+                                            </connections>
+                                        </button>
                                     </subviews>
                                 </tableViewCellContentView>
                                 <connections>
                                     <outlet property="name" destination="w2D-do-SpC" id="xCC-Rk-PJg"/>
+                                    <outlet property="number" destination="mqo-A2-wZ9" id="amR-fH-eeP"/>
                                     <outlet property="photo" destination="XYu-gg-kRA" id="Q9s-jX-1wB"/>
                                     <outlet property="price" destination="797-uD-VEH" id="7BB-US-OfA"/>
                                 </connections>
